created basic page layout + added hover effects and overlay as well.

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Title</title>
+	<title>Neat Eats</title>
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<nav>
+		<div id="navFixedBackground"></div>
 		<div id="navContainer">
-			<ul>
+			<div id="logoContainer">
+				<img id="logo" src="img/neateatslogo.png">
+			</div>
+			<div id="navLabel">FILTER BY STUDENT:</div>
+			<ul id="nameList">
+				<li class="listName"><div class="navHoverBlock"></div>AMY</li>
+				<li class="listName"><div class="navHoverBlock"></div>CHARLIE</li>
+				<li class="listName"><div class="navHoverBlock"></div>MASSEY</li>
+				<li class="listName"><div class="navHoverBlock"></div>TIM</li>
+				<li class="listName"><div class="navHoverBlock"></div>WINSON</li>
+				<li class="listName"><div class="navHoverBlock"></div>CAMILLE</li>
+				<li class="listName"><div class="navHoverBlock"></div>KIRSTY</li>
+				<li class="listName"><div class="navHoverBlock"></div>KUNAL</li>
+				<li class="listName"><div class="navHoverBlock"></div>ELLIOT</li>
+				<li class="listName"><div class="navHoverBlock"></div>BOB</li>
+				<li class="listName"><div class="navHoverBlock"></div>JOE</li>
+				<li class="listName"><div class="navHoverBlock"></div>KAREN</li>
 			</ul>
 		</div>
+		<div id="backToTop">BACK TO TOP<div class="buttonHoverBlock"></div></div>
 	</nav>
-	<div id="masterContainer">
-		<div>
+	<div id="contentContainer">
+		<div id="detailsOverlay">
+			<div id="details">
+				<div id="closeButton">close</div>
+				<div id="placeImage"><img src=""></div>
+				<div id="placeName">MILK CRATE</div>
+				<div id="placeAbout">Milk Crate is a small boutique coffeeshop serving fine espresso and simple fresh food.</div>
+				<div id="placeAddress">35 Ghuznee St<br>Wellington</div>
+				<div id="placePhone">PHONE<br>04-847-9902</div>
+			</div>
+		</div>
+		<div id="map">
 		</div>
 	</div>
 	<footer></footer>
