Added cross icon

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 	<div id="contentContainer">
 		<div id="detailsOverlay">
 			<div id="details">
-				<div id="closeButton">close</div>
+				<div id="closeButtonContainer"><img id="closeButton" src="img/cross.png"></div>
 				<div id="placeImage"><img src=""></div>
 				<div id="placeName">MILK CRATE</div>
 				<div id="placeAbout">Milk Crate is a small boutique coffeeshop serving fine espresso and simple fresh food.</div>
