--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,36 @@
 			<div id="logoContainer">
 				<img id="logo" src="img/neateatslogo.png">
 			</div>
-			<div id="navLabel">FILTER BY STUDENT:</div>
-			<ul id="nameList">
-				<li class="listName"><div class="navHoverBlock"></div>AMY</li>
-				<li class="listName"><div class="navHoverBlock"></div>CHARLIE</li>
-				<li class="listName"><div class="navHoverBlock"></div>MASSEY</li>
-				<li class="listName"><div class="navHoverBlock"></div>TIM</li>
-				<li class="listName"><div class="navHoverBlock"></div>WINSON</li>
-				<li class="listName"><div class="navHoverBlock"></div>CAMILLE</li>
-				<li class="listName"><div class="navHoverBlock"></div>KIRSTY</li>
-				<li class="listName"><div class="navHoverBlock"></div>KUNAL</li>
-				<li class="listName"><div class="navHoverBlock"></div>ELLIOT</li>
-				<li class="listName"><div class="navHoverBlock"></div>BOB</li>
-				<li class="listName"><div class="navHoverBlock"></div>JOE</li>
-				<li class="listName"><div class="navHoverBlock"></div>KAREN</li>
-			</ul>
+			<div id="studentChoices">
+				<div class="studentImageContainer">
+					<img id="studentImage" src="img/userIcon.png">
+				</div>
+				<div id="studentName">
+					<h2>CHARLIE</h2>
+				</div>
+				<ul id="placesList">
+					<li class="listName"><div class="navHoverBlock"></div>MILK CRATE</li>
+					<li class="listName"><div class="navHoverBlock"></div>CUSTOMS</li>
+					<li class="listName"><div class="navHoverBlock"></div>HUSK</li>
+				</ul>
+			</div>
+			<div id="studentNames">
+				<div id="navLabel">FILTER BY STUDENT:</div>
+				<ul id="nameList">
+					<li class="listName"><div class="navHoverBlock"></div>AMY</li>
+					<li class="listName"><div class="navHoverBlock"></div>CHARLIE</li>
+					<li class="listName"><div class="navHoverBlock"></div>MASSEY</li>
+					<li class="listName"><div class="navHoverBlock"></div>TIM</li>
+					<li class="listName"><div class="navHoverBlock"></div>WINSON</li>
+					<li class="listName"><div class="navHoverBlock"></div>CAMILLE</li>
+					<li class="listName"><div class="navHoverBlock"></div>KIRSTY</li>
+					<li class="listName"><div class="navHoverBlock"></div>KUNAL</li>
+					<li class="listName"><div class="navHoverBlock"></div>ELLIOT</li>
+					<li class="listName"><div class="navHoverBlock"></div>BOB</li>
+					<li class="listName"><div class="navHoverBlock"></div>JOE</li>
+					<li class="listName"><div class="navHoverBlock"></div>KAREN</li>
+				</ul>
+			</div>
 		</div>
 		<div id="backToTop">BACK TO TOP<div class="buttonHoverBlock"></div></div>
 	</nav>
