Added Google Map API

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,11 @@
 
 	<!-- Scripts snippets -->
 	<script src="js/jquery.min.js"></script>
+
+	<!-- Google Map CDN -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZWKpQLVVrKAUBwCrfgdI9_qKGat3X8Fc&libraries=geometry">
+    </script>
+
 	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
