added facebook api data. Changed student json file adding in ids for facebook pages

--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,9 @@
 					<img id="studentImage" src="img/userIcon.png">
 				</div>
 				<div id="studentName">
-					<h2>CHARLIE</h2>
 				</div>
+				<hr>
 				<ul id="placesList">
-					<li class="listName"><div class="navHoverBlock"></div>MILK CRATE</li>
-					<li class="listName"><div class="navHoverBlock"></div>CUSTOMS</li>
-					<li class="listName"><div class="navHoverBlock"></div>HUSK</li>
 				</ul>
 			</div>
 			<div id="studentNames">
@@ -32,17 +29,19 @@
 				</ul>
 			</div>
 		</div>
-		<div id="backToTop">BACK TO TOP<div class="buttonHoverBlock"></div></div>
+		<div id="backToTop" class="button">BACK TO TOP<div class="buttonHoverBlock"></div></div>
+		<div id="goBackButton" class="button">GO BACK<div class="buttonHoverBlock"></div></div>
 	</nav>
 	<div id="contentContainer">
 		<div id="detailsOverlay">
+			<div id='closeButtonContainer'><img id='closeButton' src='img/cross.png'></div>
 			<div id="details">
-				<div id="closeButtonContainer"><img id="closeButton" src="img/cross.png"></div>
+<!-- 				<div id="closeButtonContainer"><img id="closeButton" src="img/cross.png"></div>
 				<div id="placeImage"><img src=""></div>
 				<div id="placeName">MILK CRATE</div>
 				<div id="placeAbout">Milk Crate is a small boutique coffeeshop serving fine espresso and simple fresh food.</div>
 				<div id="placeAddress">35 Ghuznee St<br>Wellington</div>
-				<div id="placePhone">PHONE<br>04-847-9902</div>
+				<div id="placePhone">PHONE<br>04-847-9902</div> -->
 			</div>
 		</div>
 		<div id="map">
