Added example config file and cleaned up code

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Neat Eats</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Neat Eats</title>
 </head>
 <body>
 	<nav>
 		<div id="navFixedBackground"></div>
 		<div id="navContainer">
 			<div id="logoContainer">
-				<img id="logo" src="img/neateatslogo.png">
+				<img id="logo" src="img/neateatslogo.png" alt="logo">
 			</div>
 			<div id="studentChoices">
 				<div class="studentImageContainer">
-					<img id="studentImage" src="img/userIcon.png">
+					<img id="studentImage" src="" alt="studen image">
 				</div>
 				<div id="studentName">
 				</div>
@@ -34,14 +34,8 @@
 	</nav>
 	<div id="contentContainer">
 		<div id="detailsOverlay">
-			<div id='closeButtonContainer'><img id='closeButton' src='img/cross.png'></div>
+			<div id='closeButtonContainer'><img id='closeButton' src='img/cross.png' alt="close button"></div>
 			<div id="details">
-<!-- 				<div id="closeButtonContainer"><img id="closeButton" src="img/cross.png"></div>
-				<div id="placeImage"><img src=""></div>
-				<div id="placeName">MILK CRATE</div>
-				<div id="placeAbout">Milk Crate is a small boutique coffeeshop serving fine espresso and simple fresh food.</div>
-				<div id="placeAddress">35 Ghuznee St<br>Wellington</div>
-				<div id="placePhone">PHONE<br>04-847-9902</div> -->
 			</div>
 		</div>
 		<div id="map">
